# rag-platform

./: .env.example  .gitignore  Makefile  README.md  SLACK_SETUP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: main.py
app/api/v1/endpoints/: analytics.py  auth.py  health.py  ingestion.py  query.py  slack.py
app/api/v1/middleware/: auth.py  rate_limiter.py
app/core/: config.py  logging.py  plugin_registry.py
app/models/: domain.py
app/plugins/: __init__.py
app/prompts/: customer_support_system.j2  document_qa_system.j2  knowledge_base_system.j2  sales_automation_system.j2
app/repositories/: document_repository.py
app/services/agent/: agent_service.py  session_service.py  tools.py
app/services/evaluation/: eval_service.py
app/services/ingestion/: ingestion_service.py
app/services/rag/: embedding.py  llm_service.py  pipeline.py  vector_store.py
app/services/slack/: bot.py
app/utils/: helpers.py
docker/: Dockerfile
infrastructure/k8s/: deployment.yaml
infrastructure/postgres/: init.sql
scripts/: generate_token.py  smoke_test.py
tests/: conftest.py
tests/e2e/: test_workflows.py
tests/integration/: test_api.py
tests/unit/: test_auth.py  test_ingestion.py  test_pipeline.py  test_session_and_tools.py
