[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "rag-platform"
version = "1.0.0"
description = "Enterprise AI RAG Platform"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi==0.135.2",
    "uvicorn[standard]==0.42.0",
    "python-multipart==0.0.22",

    # Validation & settings
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",

    # LLM & RAG
    # All langchain-* packages must be upgraded together — they share langchain-core.
    # langchain 1.x is the current stable generation; do not mix with 0.3.x sub-packages.
    "langchain==1.2.13",
    "langchain-openai==1.1.12",
    "langchain-anthropic==1.4.0",
    "langchain-text-splitters==1.1.1",
    "langgraph==1.1.3",

    # Langfuse: observability/tracing for LLM calls.
    # Config keys (LANGFUSE_PUBLIC_KEY, LANGFUSE_SECRET_KEY, LANGFUSE_ENABLED) are defined
    # in app/core/config.py — the SDK integration is not yet wired into service code.
    # Include here so the dependency is available when that integration is added.
    # NOTE: 4.x is a major rewrite — review migration guide before enabling LANGFUSE_ENABLED=true.
    "langfuse==4.0.1",

    # Vector DB
    "qdrant-client==1.17.1",

    # Embeddings
    # sentence-transformers 5.x requires torch >= 2.0; install torch separately for GPU support.
    "sentence-transformers==5.3.0",

    # LLM fallback for embeddings (OpenAI text-embedding-3-small used when torch unavailable)
    # Used in: app/services/rag/embedding.py
    "openai==2.30.0",

    # Prompt templating
    # Used in: app/services/rag/llm_service.py
    "jinja2==3.1.6",

    # Numerical operations for embedding vectors
    # Used in: app/services/rag/embedding.py
    "numpy==2.4.3",

    # Document parsing
    "pypdf==6.9.2",
    "python-docx==1.2.0",
    "python-magic==0.4.27",

    # Database
    "asyncpg==0.31.0",
    "sqlalchemy[asyncio]==2.0.48",
    "alembic==1.18.4",

    # Cache
    "redis[hiredis]==7.4.0",

    # HTTP client
    "httpx==0.28.1",

    # Auth
    # passlib is unmaintained (last release 2020). bcrypt must be pinned to 4.0.1
    # because passlib's __version__ check breaks on bcrypt>=4.2.
    # Track https://github.com/pypa/passlib/issues/190 for a maintained alternative.
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",

    # Observability
    "structlog==25.5.0",
    "prometheus-client==0.24.1",
    "opentelemetry-sdk==1.40.0",
    "opentelemetry-instrumentation-fastapi==0.61b0",

    # Evaluation
    # ragas 0.2+ requires langchain 1.x — compatible with our stack.
    # datasets is a direct dependency of ragas evaluation pipeline.
    # Used in: app/services/evaluation/eval_service.py
    "ragas==0.4.3",
    "datasets==4.8.4",

    # Utilities
    "tenacity==9.1.4",
    "orjson==3.11.7",
    "python-dotenv==1.2.2",

    # Typing backports
    # TypedDict from typing_extensions used in app/services/agent/agent_service.py
    "typing-extensions==4.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "httpx==0.28.1",
    "factory-boy==3.3.3",
    "ruff==0.15.7",
    "mypy==1.19.1",
    "pre-commit==4.5.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ANN"]
ignore = ["ANN401"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
